spacing fixes for mac

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ a:hover{
 
 .intro {
   position: absolute;
-  height: calc(100vh);
+  height: calc(105vh);
   width: calc(105vw);
   top:-20px;
   background-color: #179E9E;
